Marking functionality Added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""
     ></script>
-
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <title>MapUrDay | Simplified Plan</title>
@@ -35,7 +34,7 @@
       <img src="logo.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
-        <form class="form ">
+        <form class="form hidden">
           <div class="form__row">
             <label class="form__label">Task</label>
             <input class="form__input form__input--task" placeholder="work" />
@@ -61,7 +60,7 @@
           <button class="form__btn">OK</button>
         </form>
 
-        <li class="workout workout--running" data-id="1234567890">
+        <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Meeting on April 14</h2>
           <div class="workout__details">
             <span class="workout__icon">🗺 </span>
@@ -77,7 +76,7 @@
             <span class="workout__value">24</span>
             <span class="workout__unit">min</span>
           </div>
-        </li>
+        </li> -->
       </ul>
 
       <p class="copyright">
