--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <button class="form__btn">OK</button>
         </form>
       </ul>
-
+      
+      <p class="reset"><button>CLEAR ALL</button></p>
       <p class="copyright">
         &copy; Copyright by
         <a
